# bamcowig

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: main.rs  utils.rs
src/utils/: alignment_handler.rs  bam_handler.rs  cram_handler.rs  filter.rs  normalizer.rs
