[package]
name = "bamcowig"
version = "0.1.0"
authors = ["ramin-shirali <r.shirali.hz@gmail.com>"]
edition = "2024"

[dependencies]
bigtools = "0.5.6"
bstr = "1.12.1"
clap = { version = "4.5.55", features = ["derive"] }
indexmap = "2.13.0"
noodles-bam = "0.85.0"
noodles-cram = "0.88.0"
noodles-sam = "0.81.0"
