[package]
name = "bamcowig"
version = "0.1.0"
authors = ["ramin-shirali <r.shirali.hz@gmail.com>"]
edition = "2024"

[dependencies]
bigtools = "0.5.6"
bstr = "1.12.1"
clap = { version = "4.5.55", features = ["derive"] }
getset = "0.1.6"
indexmap = "2.13.0"
noodles-bam = "0.85.0"
noodles-bgzf = "0.45.0"
noodles-core = "0.18.0"
noodles-cram = "0.88.0"
noodles-csi = "0.53.0"
noodles-sam = "0.81.0"
noodles-util = { version = "0.73.0", features = ["alignment"] }
rayon = "1.11.0"
